update about me and emacs-rime.md

--- a/_includes/navigatebar.html
+++ b/_includes/navigatebar.html
@@ -3,7 +3,7 @@
 		<a href="{{ site.url }}/index.html">Eason Huang</a>
 	</div>
 	<div class="navigatebar-slogan">
-		「追求自由,简单生活，享受快乐， 欢迎来到我的世界」
+		「向往和平,自由追梦,欢迎来到我的世界」
 	</div>
 	<div class="navigatebar-button">
 		<a href="{{ site.url }}/index.html">Home</a>
